feat: try init Java
Java solution init