@@ -1,4 +1,11 @@
-class Solution {
+package problems.problems_46;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
+
+public class Solution {
 
     private void swap(int[] nums, int i, int j) {
         int tmp = nums[i];
@@ -8,7 +15,7 @@ class Solution {
 
     private void dfs(int[] nums, List<List<Integer>> ans, int x) {
         if (x == nums.length - 1) {
-            ans.add(Arrays.stream(nums).boxed().toList());
+            ans.add(Arrays.stream(nums).boxed().collect(Collectors.toList()));
             return;
         }
         for (int i = x; i < nums.length; i++) {
